BRASS-473: Update PingFederate run.sh to Support Java 17
- Update run.sh for PF 11.1 and newer to add needed java options
at runtime if using Java 17.

Closes BRASS-473